# zephyr-rtos-template

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
.west/: config
app/: CMakeLists.txt  prj.conf
app/src/: main.c  main.cpp
cmake/modules/: ZephyrBuildConfig.cmake
scripts/: clang_tidy_wrapper.py  run_unit_tests.sh  setup.sh
verification/integration/: noxfile.py  requirements.txt
verification/integration/paris/: test_000_flash.py
verification/integration/tests/: test_000_flash.py
verification/unit/000_template/: CMakeLists.txt  prj.conf  testcase.yaml
verification/unit/000_template/src/: main.c  main.cpp
